@@ -23,7 +23,7 @@
     <string id="21010">Search</string>
     <string id="21011">SageTV addon</string>
     <string id="21012">Delete successful</string>
-    <string id="21013">Scheduled recording successful</string>
+    <string id="21013">Scheduled recording</string>
     <string id="21014">Attemping to playback live T</string>
     <string id="21015">Unable to playback live TV</string>
     <string id="21016">Delete</string>
@@ -40,4 +40,11 @@
     <string id="21027">Delete &amp; Clear Watched</string>
     <string id="21028">Delete &amp; Set Don't Like</string>
     <string id="21029">Delete / Wrong Recording</string>
+    <string id="21030">Add Favorite</string>
+    <string id="21031">Added favorite</string>
+    <string id="21032">Removed favorite</string>
+    <string id="21033">Set watched flag</string>
+    <string id="21034">Cleared watched flag</string>
+    <string id="21035">Set archived flag</string>
+    <string id="21036">Cleared archived flag</string>
 </strings>
