@@ -1,3 +1,6 @@
+[B]Version 1.2.12 (Oct 8, 2012)[/B]
+- Added "Add Favorite" context menu item (for airings and searches)
+
 [B]Version 1.2.11 (Oct 8, 2012)[/B]
 - Added "Delete/Wrong Recording" context menu item
 
